[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-oculus/scenes/oculus_first_person.tscn" type="PackedScene" id=2]
[ext_resource path="res://world_environment.tres" type="Environment" id=3]
[ext_resource path="res://addons/vr-common/misc/VR_Common_Shader_Cache.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/vr-common/functions/Function_Teleport.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/vr-common/functions/Function_Direct_movement.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/rooms/Room_01.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/rooms/Room_02.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/rooms/Sliding_door.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/rooms/Corridor_01.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/rooms/Room_03.tscn" type="PackedScene" id=11]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Lights" type="Spatial" parent="."]
editor/display_folded = true
visible = false

[node name="DirectionalLight" type="DirectionalLight" parent="Lights"]
transform = Transform( -0.866901, 0.261547, -0.424354, -0.0119428, 0.840153, 0.542219, 0.498339, 0.475118, -0.725205, -2, 8.80618, 2 )
visible = false
layers = 524288
shadow_enabled = true
shadow_bias = 0.09

[node name="ReflectionProbe" type="ReflectionProbe" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.24475, 0 )
visible = false
layers = 524288
max_distance = 100.0
extents = Vector3( 12.3054, 3.22752, 7.65602 )
box_projection = true
enable_shadows = true
cull_mask = 524289

[node name="OculusFirstPerson" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="ARVRCamera" parent="OculusFirstPerson" index="0"]
environment = ExtResource( 3 )
current = true

[node name="vr_common_shader_cache" parent="OculusFirstPerson/ARVRCamera" index="1" instance=ExtResource( 4 )]

[node name="Function_Teleport" parent="OculusFirstPerson/Left_Hand" index="1" instance=ExtResource( 5 )]
collision_layer = 524288
collision_mask = 524288

[node name="Function_Direct_movement" parent="OculusFirstPerson/Right_Hand" index="1" instance=ExtResource( 6 )]

[node name="Rooms" type="Spatial" parent="."]

[node name="Room_01" parent="Rooms" instance=ExtResource( 7 )]

[node name="Room_02" parent="Rooms" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 15 )
arvr_camera = NodePath("../../OculusFirstPerson/ARVRCamera")
left_controller = NodePath("../../OculusFirstPerson/Left_Hand")
right_controller = NodePath("../../OculusFirstPerson/Right_Hand")

[node name="Sliding_door_01" parent="Rooms" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 8 )

[node name="Sliding_door_02" parent="Rooms" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -5, 0, 15 )

[node name="Sliding_door_03" parent="Rooms" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 24 )

[node name="Corridor_01" parent="Rooms" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 15 )

[node name="Corridor_02" parent="Rooms" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -12, 0, 31 )

[node name="Room_03" parent="Rooms" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 31 )
[connection signal="slide_door" from="Rooms/Sliding_door_02" to="." method="_on_Sliding_door_02_slide_door"]

[editable path="OculusFirstPerson"]
